--- a/package.json
+++ b/package.json
@@ -13,7 +13,10 @@
     "@astrojs/check": "^0.3.1",
     "@astrojs/tailwind": "^5.0.2",
     "@fontsource/noto-sans": "^5.0.17",
+    "@studio-freight/lenis": "^1.0.29",
     "astro": "^3.6.1",
+    "gsap": "^3.12.3",
+    "split-type": "^0.3.4",
     "tailwindcss": "^3.0.24",
     "typescript": "^5.3.2"
   },
