--- a/package.json
+++ b/package.json
@@ -15,12 +15,14 @@
     "@fontsource/noto-sans": "^5.0.17",
     "@studio-freight/lenis": "^1.0.29",
     "astro": "^3.6.1",
+    "astro-icon": "next",
     "gsap": "^3.12.3",
     "split-type": "^0.3.4",
     "tailwindcss": "^3.0.24",
     "typescript": "^5.3.2"
   },
   "devDependencies": {
+    "@iconify-json/iconoir": "^1.1.38",
     "@tailwindcss/typography": "^0.5.10",
     "prettier-plugin-astro": "^0.12.2",
     "tailwindcss-animated": "^1.0.1"
