--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "astro": "^3.6.1",
     "astro-icon": "next",
     "gsap": "^3.12.3",
+    "nanostores": "^0.9.5",
     "split-type": "^0.3.4",
     "tailwindcss": "^3.0.24",
     "typescript": "^5.3.2"
