--- a/package.json
+++ b/package.json
@@ -11,13 +11,16 @@
   },
   "dependencies": {
     "@astrojs/check": "^0.7.0",
+    "@astrojs/mdx": "^3.1.2",
     "@astrojs/tailwind": "^5.1.0",
     "@fontsource/noto-sans": "^5.0.17",
     "@studio-freight/lenis": "^1.0.29",
     "astro": "^4.11.3",
+    "astro-expressive-code": "^0.35.3",
     "astro-icon": "next",
     "gsap": "^3.12.3",
     "nanostores": "^0.9.5",
+    "smartypants": "^0.2.2",
     "split-type": "^0.3.4",
     "tailwindcss": "^3.0.24",
     "typescript": "^5.3.2"
