--- a/package.json
+++ b/package.json
@@ -24,7 +24,8 @@
     "smartypants": "^0.2.2",
     "split-type": "^0.3.4",
     "tailwindcss": "^3.0.24",
-    "typescript": "^5.3.2"
+    "typescript": "^5.3.2",
+    "rehype-pretty-code": "^0.13.2"
   },
   "devDependencies": {
     "@tailwindcss/typography": "^0.5.10",
